import React from "react";
import "@testing-library/jest-dom";
import { render, screen } from "@testing-library/react";
import renderer from "react-test-renderer";
import Header from "../header";
import { BrowserRouter } from "react-router-dom";

describe("Header bible component", () => {
  it("matches the snapshot", () => {
    const component = renderer.create(
      <BrowserRouter>
        <Header title={"test title"} languages={["test language1", "test languages 2"]} />
      </BrowserRouter>
    );
    expect(component).toMatchSnapshot();
  });

  it("Renders the Header correctly", () => {
    render(
      <BrowserRouter>
        <Header title={"test title"} languages={["test language1", "test languages 2"]} />
      </BrowserRouter>
    );

    expect(
      screen.getByText((content, element) => {
        return (
          element.tagName.toLowerCase() === "strong" &&
          content.includes("test title")
        );
      })
    );

    expect(
      screen.getByText((content, element) => {
        return (
          element.tagName.toLowerCase() === "strong" &&
          content.includes("test language1")
        );
      })
    );
  });
});
